fix centering of search box when window is too small

--- a/css/main.css
+++ b/css/main.css
@@ -132,9 +132,10 @@ ul {
 
 /* Styles menu button */
 .m-title {
+  float: right !important;
   display: flex;
-  justify-content: center;
-  align-self: center;
+  /* justify-content: center;
+  align-self: center; */
   padding: 7px 9px 7px 9px;
   margin: 7px 20px 7px 20px;
   width: 60px;
@@ -149,7 +150,8 @@ ul {
 }
 
 .m-title span {
-  align-self: center;
+  float: right !important;
+  /* align-self: center; */
   font-size: 11pt;
 }
 
@@ -399,10 +401,15 @@ h4 a:visited:hover {
 
 /* Styles the header */
 .blog-header {
+  position: relative;
   background-color: #fafafa;
   /* box-shadow: 1px 1px 1px #e9e9e9; */
   padding: 13px 50px 13px 13px !important;
   height: 114px;
+}
+
+.search-wrapper {
+  float: right;
 }
 
 /* Styles the footer */
@@ -541,14 +548,14 @@ input[type=submit]:hover {
 
   /* Re-position search bar */
   .search-box {
-    float: none;
-    margin: 0 auto;
-    width: 300px;
     margin-top: 30px;
+    float: none;
+    display: inline-block;
   }
 
-  #s {
-    width: 220px;
+  .search-wrapper {
+    text-align: center;
+    width: 100%;
   }
 
   /* Re-position search button */
